fixed some bugs and added google auth